--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
-    "name": "hlv/hello-world",
-    "description": "the first composer package",
+    "name": "your-vendor-name/package-name",
+    "description": "A short description of what your package does",
+    "require": {
+        "php": "^7.0"
+    },
     "type": "php",
     "license": "aaa",
     "authors": [
@@ -9,8 +12,5 @@
             "email": "haolangvn@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=5.3.0",
-    }
+    "minimum-stability": "dev"
 }
